momo payment integration

--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -55,7 +55,7 @@
                                     <input class="btn btn-outline-dark rounded-full"
                                            type="submit"
                                            value="@item"
-                                           name="brand" />
+                                           name="color" />
 
                                 </div>
                             }
