--- a/Views/Shopping/ShowToCart.cshtml
+++ b/Views/Shopping/ShowToCart.cshtml
@@ -161,35 +161,36 @@
 
 
                     @*Order Sumamry*@
-                    <div class="">
-                        <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
-                        <div class="d-flex justify-content-between my-2">
-                            <p>Total</p>
-                            <p>$@Session["TotalCost"].00</p>
-                        </div>
+            <div class="">
+                <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
+                <div class="d-flex justify-content-between my-2">
+                    <p>Total</p>
+                    <p>$@Session["TotalCost"].00</p>
+                </div>
 
-                        <div class="d-flex justify-content-between mb-2">
-                            <p>Shipping</p>
-                            <p>$@Session["Shipping"].00</p>
-                        </div>
+                <div class="d-flex justify-content-between mb-2">
+                    <p>Shipping</p>
+                    <p>$@Session["Shipping"].00</p>
+                </div>
 
-                        @*<div class="d-flex justify-content-between pb-2 mb-2 border-b">
-                                <p>Discount</p>
-                                <p>$0.00</p>
-                            </div>*@
-                        <div class="d-flex justify-content-between my-2">
-                            <p>Subtotal</p>
-                            <p>$@Session["Total_order"].00</p>
-                        </div>
-                        @if (Convert.ToInt32(Session["CheckQuantity1"]) != 0 || Convert.ToInt32(Session["CheckQuantity2"]) != 0)
-                        {
-                            <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" disabled="disabled" />
-                        }
-                        else
-                        {
-                            <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" />
-                        }
-                    </div>
+                @*<div class="d-flex justify-content-between pb-2 mb-2 border-b">
+            <p>Discount</p>
+            <p>$0.00</p>
+        </div>*@
+                <div class="d-flex justify-content-between my-2">
+                    <p>Subtotal</p>
+                    <p>$@Session["Total_order"].00</p>
+                </div>
+                @if (Convert.ToInt32(Session["CheckQuantity1"]) != 0 || Convert.ToInt32(Session["CheckQuantity2"]) != 0)
+                {
+                    <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" disabled="disabled" />
+                }
+                else
+                {
+                    <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" />
+                }
+                    <a href="/Shopping/Payment">Payment</a>
+            </div>
                 }
             </div>
         </div>
