--- a/Views/Home/SearchOrders.cshtml
+++ b/Views/Home/SearchOrders.cshtml
@@ -6,8 +6,8 @@
 @using (Html.BeginForm("SearchOrders", "Home"))
 {
     <div class="text-center my-lg-4 mx-auto justify-center">
-        <div class="text-[48px] font-semibold">What are you searching for</div>
-        <p>Surf for more</p>
+        <div class="text-[48px] font-semibold">Search Your Orders</div>
+        <p>Enter your email or phone to find your order</p>
 
         <div class="align-content-center align-self-center">
             <input type="text" class="font-light text-gray-400 bg-white border-b py-2" style="padding-right: 400px; padding-left:20px" placeholder="Search" name="searchOrders" value="Search"/>
