--- a/Views/Home/YourOrders.cshtml
+++ b/Views/Home/YourOrders.cshtml
@@ -2,76 +2,91 @@
 @{
     ViewBag.Title = "YourOrders";
 }
-
-<h2>YourOrders</h2>
-
-<div>Email: @(((WebApplication1.Models.customer)Session["Customer"]).email)</div>
-<div>Address: @(((WebApplication1.Models.customer)Session["Customer"]).addresss) @(((WebApplication1.Models.customer)Session["Customer"]).ward) @(((WebApplication1.Models.customer)Session["Customer"]).district) @(((WebApplication1.Models.customer)Session["Customer"]).city) </div>
-<div>Phone: @(((WebApplication1.Models.customer)Session["Customer"]).phone)</div>
-<table class="table">
-    <tr>
-        <th>
-            Mã đơn hàng
-        </th>
-        <th>
-            Ngày đặt
-        </th>
-        <th>
-            Ngày vận chuyển
-        </th>
-        <th>
-            Ngày gửi đến
-        </th>
-        <th>
-            Tình trạng xử lý
-        </th>
-        <th>
-            Tình trạng thành  công
-        </th>
-        <th>
-            Huỷ đơn hàng
-        </th>
-        <th>
-            Tổng đơn hàng
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-
-        <tr>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.id_order)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.created_at)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.started_at)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.finished_at)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.pending)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.completed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.canceled)
-            </td>
-            <td>
-                $@Html.DisplayFor(modelItem => item.total_price)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id_order }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id_order })
-            </td>
-        </tr>
-
-    }
-</table>
-<a href="@Url.Action("Index", "Home")" class="px-6 text-white rounded-md bg-blue-600 hover:bg-blue-800 py-2 mx-auto font-medium text-sm">Countious Shopping</a>
+@*<div>Email: @(((WebApplication1.Models.customer)Session["Customer"]).email)</div>
+    <div>Address: @(((WebApplication1.Models.customer)Session["Customer"]).addresss) @(((WebApplication1.Models.customer)Session["Customer"]).ward) @(((WebApplication1.Models.customer)Session["Customer"]).district) @(((WebApplication1.Models.customer)Session["Customer"]).city) </div>
+    <div>Phone: @(((WebApplication1.Models.customer)Session["Customer"]).phone)</div>*@
+<div class="text-sm" style="padding: 3em 10em">
+    <div class="flex justify-between">
+        <div>
+            <div class="mb-2 text-3xl font-bold">Order Details</div>
+            <div class="mb-4 text-xs font-light text-gray-500">Check the status of recent and old orders &amp; discover more products</div>
+        </div>
+        <div>
+            <a href="/Home/SearchPage" class="btn btn-outline-dark px-3 py-2 rounded-md text-sm text-decoration-none">Continuous Shopping</a>
+        </div>
+    </div>
+    <div class="my-3 w-full grid grid-cols-3 rounded-md" style="border: 0.5px solid #dcdcdc">
+        @foreach (var item in Model)
+        {
+            <div class="col-span-1 p-4" style="border-right: 0.5px solid #dcdcdc">
+                <div class="grid space-y-3">
+                    <div class="grid">
+                        <div class="text-gray-500">Order ID</div>
+                        <div class="font-semibold text-black">
+                            # @item.id_order
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="text-gray-500">Date</div>
+                        <div class="font-semibold text-black">
+                            @item.created_at
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="text-gray-500">Email</div>
+                        <div class="font-semibold text-black">
+                            @item.customer.email
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="text-gray-500">Address</div>
+                        <div class="font-semibold text-black">
+                            @item.customer.addresss @item.customer.ward @item.customer.district @item.customer.city
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="text-gray-500">Phone</div>
+                        <div class="font-semibold text-black">
+                            @item.customer.phone
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="text-gray-500">Order Status</div>
+                        <div class="font-semibold text-black">
+                            <div class="w-5 h-5 rounded-circle" style="color: #00ca1a"></div>
+                            @item.pending
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-span-2 p-4">
+                <div class="mb-4 pb-4" style="border-bottom: 0.5px solid #dcdcdc">
+                    @foreach (var items in item.order_item) 
+                    {
+                    <div class="grid grid-cols-4 mb-2">
+                        <img src="/wwwroot/Images/Products/@items.product.images" class="object-cover col-span-1">
+                        <div class="justify-between col-span-2">
+                            <div class="font-medium text-lg">
+                                <div>@items.product.names</div>
+                            </div>
+                            <div class="text-gray-500">@items.product.color</div><br>
+                            <a href="@Url.Action("Details_Pro", "Home", new {id = @items.product.id_product})" class="text-gray-300">View More</a>
+                        </div>
+                        <div class="col-span-1 text-end font-medium text-lg">
+                            <div>$@items.product.price.00</div>
+                        </div>
+                    </div>
+                    }
+                </div>
+                <div class="flex justify-between">
+                    <div class="flex space-x-3">
+                        <input type="submit" class="btn btn-outline-danger px-3 py-2 rounded-md text-sm" value="Cancel Order">
+                    </div>
+                    <div class="font-medium text-lg items-center">
+                        $@item.total_price.00
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
