--- a/Views/Home/YourOrders.cshtml
+++ b/Views/Home/YourOrders.cshtml
@@ -15,9 +15,10 @@
             <a href="/Home/SearchPage" class="btn btn-outline-dark px-3 py-2 rounded-md text-sm text-decoration-none">Continuous Shopping</a>
         </div>
     </div>
-    <div class="my-3 w-full grid grid-cols-3 rounded-md" style="border: 0.5px solid #dcdcdc">
-        @foreach (var item in Model)
-        {
+
+    @foreach (var item in Model)
+    {
+        <div class="mb-5 w-full grid grid-cols-3 rounded-md" style="border: 0.5px solid #dcdcdc">
             <div class="col-span-1 p-4" style="border-right: 0.5px solid #dcdcdc">
                 <div class="grid space-y-3">
                     <div class="grid">
@@ -61,21 +62,21 @@
             </div>
             <div class="col-span-2 p-4">
                 <div class="mb-4 pb-4" style="border-bottom: 0.5px solid #dcdcdc">
-                    @foreach (var items in item.order_item) 
+                    @foreach (var items in item.order_item)
                     {
-                    <div class="grid grid-cols-4 mb-2">
-                        <img src="/wwwroot/Images/Products/@items.product.images" class="object-cover col-span-1">
-                        <div class="justify-between col-span-2">
-                            <div class="font-medium text-lg">
-                                <div>@items.product.names</div>
+                        <div class="grid grid-cols-4 mb-2">
+                            <img src="/wwwroot/Images/Products/@items.product.images" class="object-cover col-span-1">
+                            <div class="justify-between col-span-2">
+                                <div class="font-medium text-lg">
+                                    <div>@items.product.names</div>
+                                </div>
+                                <div class="text-gray-500">@items.product.color</div><br>
+                                <a href="@Url.Action("Details_Pro", "Home", new {id = @items.product.id_product})" class="text-gray-300">View More</a>
                             </div>
-                            <div class="text-gray-500">@items.product.color</div><br>
-                            <a href="@Url.Action("Details_Pro", "Home", new {id = @items.product.id_product})" class="text-gray-300">View More</a>
+                            <div class="col-span-1 text-end font-medium text-lg">
+                                <div>$@items.product.price.00</div>
+                            </div>
                         </div>
-                        <div class="col-span-1 text-end font-medium text-lg">
-                            <div>$@items.product.price.00</div>
-                        </div>
-                    </div>
                     }
                 </div>
                 <div class="flex justify-between">
@@ -87,6 +88,6 @@
                     </div>
                 </div>
             </div>
-        }
-    </div>
+        </div>
+    }
 </div>
