fix Index.cshtml + Details_Pro.cshtml

--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -119,8 +119,8 @@
                                             <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
                                         </div>
 
-                                        <div class="">
-                                            <a href="/Home/Details_Pro/@item.id_product" class="p-2 text-lg text-blue-600">View More 🡥</a>
+                                        <div>
+                                            <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
                                         </div>
                                     </div>
                                 </div>
