--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -10,39 +10,47 @@
     <div>
         <div class="text-xs">
             <div class="px-4">
-                <a href="#">Home</a> \
-                <a href="#">List</a> \
-                <a href="#">Product</a> \
+                <a href="@Url.Action("Index", "Home")">Home</a> \
+                <a href="@Url.Action("SearchPage", "Home")">List</a> \
+                <a href="#">@Html.DisplayFor(model => model.names)</a> \
             </div>
 
             <div class="w-75 grid grid-cols-4 grid-rows-2 mx-auto">
                 <div class="col-span-2 m-4">
                     <img src="~/wwwroot/Images/Products/@Html.DisplayFor(model => model.images)"
                          class="w-full object-cover object-center mb-3">
-                    <div>
-                        @*<h3 class="font-medium text-gray-900">Highlights</h3>
 
-                            <div class="mt-4">
-                                <ul role="list" class="list-disc space-y-2 pl-4 text-sm">
-                                    <li class="text-gray-400"><span class="text-gray-600">Hand cut and sewn locally</span></li>
-
-                                    <li class="text-gray-400"><span class="text-gray-600">Dyed with our proprietary colors</span></li>
-
-                                    <li class="text-gray-400"><span class="text-gray-600">Pre-washed &amp; pre-shrunk</span></li>
-
-                                    <li class="text-gray-400"><span class="text-gray-600">Ultra-soft 100% cotton</span></li>
-                                </ul>
-                            </div>*@
-                    </div>
-                    <div class="mt-10">
-                        @*<h2 class="font-medium text-gray-900">Details</h2>
-                            <div class="mt-4 space-y-6">
-                                <p class="text-gray-600">The 6-Pack includes two black, two white, and two heather gray Basic Tees. Sign up for our subscription service and be the first to get new, exciting colors, like our upcoming &quot;Charcoal Gray&quot; limited release.</p>
-                            </div>*@
+                    <div class="mt-4 mb-3 font-medium text-lg">Technical Specification</div>
+                    <div class="grid grid-cols-2">
+                        <div class="font-medium grid col-span-1 space-y-2">
+                            <div>Display</div>
+                            <div>Operating System</div>
+                            <div>Processor</div>
+                            <div>Battery</div>
+                            <div>External Memory</div>
+                        </div>
+                        <div class="grid col-span-1 space-y-2">
+                            <div>
+                                @Html.DisplayFor(model => model.display)
+                            </div>
+                            <div>
+                                @Html.DisplayFor(model => model.operating_system)
+                            </div>
+                            <div>
+                                @Html.DisplayFor(model => model.processor)
+                            </div>
+                            <div>
+                                @Html.DisplayFor(model => model.battery)
+                            </div>
+                            <div>
+                                @Html.DisplayFor(model => model.ram)
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-span-2 m-4 text-xs">
-                    <p class="text-lg font-bold">@Html.DisplayFor(model => model.names)</p>
+                    <p class="text-xl font-bold">@Html.DisplayFor(model => model.names)</p>
+                    <p class="font-light">@Html.DisplayFor(model => model.brand)</p>
                     <p class="text-3xl tracking-tight text-gray-900 mt-3">$@Html.DisplayFor(model => model.price)</p>
                     <!-- Reviews -->
                     <div class="mt-3">
@@ -51,6 +59,7 @@
                             <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>First star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                             <h3 class="ml-2 font-semibold">@Html.DisplayFor(model => model.rate)</h3>
                             <h3 class="ml-4 text-blue-600 dark:text-white">1,745 reviews</h3>
+                            <div class="text-gray-300 font-semibold ml-4">Available: @Html.DisplayFor(model => model.quantity)</div>
                         </div>
                     </div>
 
@@ -58,72 +67,39 @@
                         <!-- Colors -->
                         <div>
                             <h3 class="font-medium text-gray-900">Color</h3>
-
                             <fieldset class="mt-2">
-                                <legend class="sr-only">Choose a color</legend>
                                 <div class="flex items-center space-x-3">
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                         @foreach (var item in ViewData["pro"] as List<WebApplication1.Models.product>)
                                         {
-                                            <a href="/Home/Details_Pro/@item.id_product" class="p-2 text-center border rounded-md hover:bg-gray-100 text-black">@item.color</a>
+                                            <a href="/Home/Details_Pro/@item.id_product" class="p-2 mr-2 text-center text-black rounded-md hover:bg-gray-100 hover:italic border">@item.color</a>
                                         }
                                     </div>
-                                    @*<label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                                            <input type="radio" name="color-choice" value="White" class="sr-only" aria-labelledby="color-choice-0-label">
-                                            <span id="color-choice-0-label" class="sr-only"> White </span>
-                                            <span aria-hidden="true" class="h-8 w-8 bg-white rounded-full border border-black border-opacity-10"></span>
-                                        </label>
-                                        <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                                            <input type="radio" name="color-choice" value="Gray" class="sr-only" aria-labelledby="color-choice-1-label">
-                                            <span id="color-choice-1-label" class="sr-only"> Gray </span>
-                                            <span aria-hidden="true" class="h-8 w-8 bg-gray-200 rounded-full border border-black border-opacity-10"></span>
-                                        </label>
-
-                                        <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-900">
-                                            <input type="radio" name="color-choice" value="Black" class="sr-only" aria-labelledby="color-choice-2-label">
-                                            <span id="color-choice-2-label" class="sr-only"> Black </span>
-                                            <span aria-hidden="true" class="h-8 w-8 bg-gray-900 rounded-full border border-black border-opacity-10"></span>
-                                        </label>*@
                                 </div>
                             </fieldset>
                         </div>
+                        <div class="flex space-x-3 mb-2 mt-6 ">
 
-                        <!-- Sizes -->
-                        <!--<div class="my-3">
-                            <div class="flex items-center justify-between">
-                                <h3 class="font-medium text-gray-900">Internal Memory</h3>
-                            </div>
+                            @if (Session["email"] != null)
+                            {
 
-                            <fieldset class="mt-2">
-                                <legend class="sr-only">Choose a size</legend>
-                                <div class="flex gap-2">-->
-                        @*<a href="#" class="p-2 text-center border rounded-md hover:bg-gray-100 text-black">128GB</a>
-                            <a href="#" class="p-2 text-center border rounded-md hover:bg-gray-100 text-black">152GB</a>
-                            <a href="#" class="p-2 text-center border rounded-md hover:bg-gray-100 text-black">256GB</a>
-                            <a href="#" class="p-2 text-center border rounded-md hover:bg-gray-100 text-black">1TB</a>*@
-
-                        <!--</div>
-                            </fieldset>
-                        </div>-->
-                        @if (Session["email"] != null)
-                        {
-
-                            <a href="/Shopping/AddToCart/@Html.DisplayFor(model => model.id_product)">
-                                <div style="text-decoration:none; color:black;text-align:center" class="w-full py-3 rounded-md bg-gray-100 hover:bg-gray-200 mb-2 mt-6 font-medium" )">Add To Cart</div>
-                            </a>
-                            <a href="/Shopping/BuyNow/@Html.DisplayFor(model => model.id_product)">
-                                <div style="text-decoration:none; color:black;text-align:center" class="w-full py-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
-                            </a>
-                        }
-                        else
-                        {
-                            <a href="/ShoppingCart/AddToCart/@Html.DisplayFor(model => model.id_product)">
-                                <div style="text-decoration:none; color:black;text-align:center" class="w-full py-3 rounded-md bg-gray-100 hover:bg-gray-200 mb-2 mt-6 font-medium" )">Add To Cart</div>
-                            </a>
-                            <a href="/ShoppingCart/BuyNow/@Html.DisplayFor(model => model.id_product)">
-                                <div style="text-decoration:none; color:black;text-align:center" class="w-full py-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
-                            </a>
-                        }
+                                <a href="/Shopping/BuyNow/@Html.DisplayFor(model => model.id_product)">
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
+                                </a>
+                                <a href="/Shopping/AddToCart/@Html.DisplayFor(model => model.id_product)">
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-200 font-medium" )">Add To Cart</div>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="/ShoppingCart/BuyNow/@Html.DisplayFor(model => model.id_product)">
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
+                                </a>
+                                <a href="/ShoppingCart/AddToCart/@Html.DisplayFor(model => model.id_product)">
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-200 font-medium" )">Add To Cart</div>
+                                </a>
+                            }
+                        </div>
                     </form>
                 </div>
                 <div class="col-span-2 m-4">
@@ -137,16 +113,19 @@
                         </div>
                     </div>
                     <div class="flex items-center mb-1">
+
+                        <div class="mr-4 font-medium text-lg">John. Clerk</div>
+
                         <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>First star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                         <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Second star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                         <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Third star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                         <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Fourth star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                         <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Fifth star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
-                        <h3 class="ml-2 font-semibold text-gray-900 dark:text-white">Thinking to buy another one!</h3>
+                        
                     </div>
-                    <footer class="mb-5 text-gray-500 dark:text-gray-400"><p>Reviewed in the United Kingdom on <time datetime="2017-03-03 19:00">March 3, 2017</time></p></footer>
+                    <div class="mb-3 text-gray-500 dark:text-gray-400"><p>Reviewed in the United Kingdom on <time datetime="2017-03-03 19:00">March 3, 2017</time></p></div>
                     <p class="mb-2 font-light text-gray-500 dark:text-gray-400">This is my third Invicta Pro Diver. They are just fantastic value for money. This one arrived yesterday and the first thing I did was set the time, popped on an identical strap from another Invicta and went in the shower with it to test the waterproofing.... No problems.</p>
-                    <p class="mb-3 font-light text-gray-500 dark:text-gray-400">It is obviously not the same build quality as those very expensive watches. But that is like comparing a Citroën to a Ferrari. This watch was well under £100! An absolute bargain.</p>
+                    <p class="mb-2 font-light text-gray-500 dark:text-gray-400">It is obviously not the same build quality as those very expensive watches. But that is like comparing a Citroën to a Ferrari. This watch was well under £100! An absolute bargain.</p>
                     <a href="#" class="block mb-5 font-medium text-blue-600 hover:underline dark:text-blue-500">Read more</a>
                     <aside>
                         <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">19 people found this helpful</p>
