--- a/Views/Shopping/ShowToCart.cshtml
+++ b/Views/Shopping/ShowToCart.cshtml
@@ -104,37 +104,37 @@
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="email" class="text-sm">Email</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required/>
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="phone" class="text-sm">Phone</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required/>
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="street" class="text-sm">Street</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address"required/>
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="district" class="text-sm">District</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required/>
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="ward" class="text-sm">Ward</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required/>
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
                         <div class="relative w-full" data-te-input-wrapper-init>
                             <label for="city" class="text-sm">City</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city"required />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" required />
                         </div>
                     </div>
                     <div class="mt-2 text-black">
@@ -145,52 +145,50 @@
                     </div>
 
                     @*Promo Code*@
-                    <div class="font-medium my-2">Apply Coupon</div>
-                    <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
+                    <div class="my-4">
+                        <div class="font-medium mb-2">Apply Coupon</div>
+                        <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
 
-                    @*Enter promo-code*@
-                    <div class="mt-2 text-black">
-                        <div class="relative w-full" data-te-input-wrapper-init>
-                            <label for="code" class="text-sm">Promocode</label><br />
-                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your promocode" name="code" />
+
+                        @*Enter promo-code*@
+                        <div class="mt-2 text-black">
+                            <div class="relative w-full" data-te-input-wrapper-init>
+                                <label for="code" class="text-sm">Promocode</label><br />
+                                <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your promocode" name="code" />
+                            </div>
                         </div>
                     </div>
-
-                    @*Apply Promo-Code*@
-                    <!--<input type="submit" class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;" value="Apply">-->
-
-
                     @*Order Sumamry*@
-            <div class="">
-                <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
-                <div class="d-flex justify-content-between my-2">
-                    <p>Total</p>
-                    <p>$@Session["TotalCost"].00</p>
-                </div>
+                    <div>
+                        <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
+                        <div class="d-flex justify-content-between my-2">
+                            <p>Total</p>
+                            <p>$@Session["TotalCost"].00</p>
+                        </div>
 
-                <div class="d-flex justify-content-between mb-2">
-                    <p>Shipping</p>
-                    <p>$@Session["Shipping"].00</p>
-                </div>
+                        <div class="d-flex justify-content-between mb-2">
+                            <p>Shipping</p>
+                            <p>$@Session["Shipping"].00</p>
+                        </div>
 
-                @*<div class="d-flex justify-content-between pb-2 mb-2 border-b">
-            <p>Discount</p>
-            <p>$0.00</p>
-        </div>*@
-                <div class="d-flex justify-content-between my-2">
-                    <p>Subtotal</p>
-                    <p>$@Session["Total_order"].00</p>
-                </div>
-                @if (Convert.ToInt32(Session["CheckQuantity1"]) != 0 || Convert.ToInt32(Session["CheckQuantity2"]) != 0)
-                {
-                    <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" disabled="disabled" />
-                }
-                else
-                {
-                    <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" />
-                }
-                    <a href="/Shopping/Payment">Payment</a>
-            </div>
+                        @*<div class="d-flex justify-content-between pb-2 mb-2 border-b">
+                                <p>Discount</p>
+                                <p>$0.00</p>
+                            </div>*@
+                        <div class="d-flex justify-content-between my-2">
+                            <p>Subtotal</p>
+                            <p>$@Session["Total_order"].00</p>
+                        </div>
+                        @if (Convert.ToInt32(Session["CheckQuantity1"]) != 0 || Convert.ToInt32(Session["CheckQuantity2"]) != 0)
+                        {
+                            <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" disabled="disabled" />
+                        }
+                        else
+                        {
+                            <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-3" type="submit" value="Checkout" />
+                        }
+                        <a href="/Shopping/Payment">Payment</a>
+                    </div>
                 }
             </div>
         </div>
